# cargo-ws-manage

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: config.rs  crates.rs  fs.rs  input.rs  lib.rs  main.rs  new.rs  toml_data.rs  workspace.rs
src/config/: new.rs
src/fs/: cargo_toml.rs
tests/: fs_test.rs
