[package]
name = "cargo-ws-manage"
version = "0.2.0"
edition = "2021"
authors = ["einfachIrgendwer0815"]
description = "Cargo workspace management"
readme = "README.md"
repository = "https://github.com/einfachIrgendwer0815/cargo-ws-manage"
license = "MIT"
keywords = ["workspace", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

publish = false # prevent inadvertent publishes

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "1.0.140"

[dev-dependencies]
test-context = "0.1.4"
rand = "0.8.5"
